<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">TIMBY</string>
    <string name="title_projects">Media Files</string>
    <string name="title_lessons">Lessons</string>
	<string name="add">Add Report</string>
	<string name="view">View Reports</string>
	<string name="help">Lessons</string>
	<string name="sync">Sync to Server</string>
	<string name="export">Export to SD</string>
	<string name="export_option">Include files already exported?</string>
	<string name="unsaved_changes_alert">You have unsaved changes!</string>
	<string name="save">Save</string>
	<string name="discard">Discard</string>
	<string name="max_vid_length">Maximum video length in minutes</string>
	<string name="menu_export">Export to SD</string>
	<string name="delete_report_confirmation">Are you sure you want to delete report?</string>
	<string name="report_status">Status</string>
	<string name="update_lessons">Lessons</string>
	<string name="update_videos">Videos</string>
	<string name="choose_lessons_download">Which lessons do you want to update?</string>
	<string name="add_caption">Add Caption</string>
	<string name="skip">Skip</string>
	<string name="add_caption_alert">Do you want to a caption?</string>
	<string name="add_picture">Image</string>
	<string name="add_video">Video</string>
	<string name="add_audio">Audio</string>
	<string name="view_gallery">Gallery</string>
	<string name="capture_audio">Audio</string>
	<string name="capture_video">Video</string>
	<string name="capture_picture">Picture</string>
	<string name="company_or_person_field">Company/Person</string>
	<string name="description_field">Tell us what is happening</string>
    <string name="set_location">Set Location</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string-array name="issues">
        <item>Select Issue</item>
        <item>Logging</item>
    </string-array>
    <string-array name="categories">
        <item>Illegal Permit</item>
        <item>Community Land Rights</item>
        <item>Corruption</item>
        <item>Other</item>
    </string-array>
    <string-array name="sectors">
        <item>Forestry</item>
        <item>Mining</item>
        <item>Agriculture</item>
        <item>Bushmeat</item>
    </string-array>
    <string-array name="entities">
    <item>Firestone Liberia, Inc</item><item>Cavalla Rubber Corporation</item><item>Golden Veroleum (Libeira), Inc (GVL)</item><item>Liberian Agricultural Corporation (LAC)</item><item>Liberia Forest Products Inc.</item><item>LIBINC Oil Palm Inc.</item><item>Rubber Cultuur Maatschappij â€˜Amsterdamâ€™ and Nordmann Rasmann and Company (Salala Plantation)</item><item>Sime Darby Plantation (Liberia) Inc.</item><item>ADA Commercial Inc.</item><item>Novel</item><item>Decoris</item><item>Sinoe Rubber Plantation</item><item>The Liberia Company (Cocopa)</item><item>Equatorial Palm Oil (EPO)</item><item>AMLIB United Minerals Inc. (Grand Gedeh County)</item><item>AMLIB United Minerals Inc. (Grand Gedeh County)</item><item>AMLIB United Minerals Inc. (Grand Gedeh County)</item><item>Bentley International Trading Corporation</item><item>China (Hong Kong) Mining Company, Ltd.</item><item>China Union Investment (Liberia)</item><item>Bong Mines Company, Ltd.</item><item>ArclorMittal Liberia</item><item>Putu Iron Ore Mining, Inc </item><item>Mano River Iron Ore Ltd.</item><item>Bokon Jideh Resources</item><item>Bea Mountain Mining corp</item><item>Explorex Overseas Ltd. (Henry)</item><item>Explorex Overseas Ltd. (St. Paul)</item><item>Deveton Mining</item><item>Afro Minerals Inc</item><item>Hummingbird Resources</item><item>Hummingbird Resources</item><item>BSG Resources Liberia Ltd.</item><item>China Henan International Corp</item><item>Crystal River</item><item>Fine Minerals International</item><item>Genesis Mining Inc.</item><item>Global Mineral Investment LCC</item><item>Macnemo</item><item>Target Resources</item><item>Usoma Minerals and Mines</item><item>Voila International</item><item>BHP Billiton (Liberia)</item><item>Jamu Resources Inc</item><item>Treco Mining Corp</item><item>Konblo Bumi Inc. (Kakata)</item><item>Bopolu Commercial Ltd.</item><item>Sealand Diamonds</item><item>Pedra Mining (Gbarpolu)</item><item>Broadway Consolidated PLC</item><item>Estmor Gold Mining Co.</item><item>Sinoe Exploration Ltd.</item><item>Ascension Resources Corp.</item><item>Youssef Diamond Mining Corp.</item><item>Southern Cross Investment Ltd.</item><item>Iron Resources Inc</item><item>International Business Exchange</item><item>TSIMPILO Trading</item><item>Deveton/Hummingbird JV</item><item>Elenito/Sesa Goa/Vedanta</item><item>KPO Resource Inc</item><item>Mano River Resources Inc.</item><item>Anadarko Liberia Block-10 company</item><item>Oranto Petroleum Chevron Liberia B Limited </item><item>Oranto Petroleum Chevron Liberia B Limited </item><item>Oranto Petroleum Chevron Liberia B Limited </item><item>REPSOL Exploracion S.A. </item><item>Woodside West Africa PTY Ltd. </item><item>Regal Liberia Ltd. and European Hydrocarbons Ltd. </item><item>Euro Liberia Logging </item><item>International Consultant Capital (ICC)</item><item>Geblo Logging</item><item>Liberia Timber Trading Corporation (LTTC)</item><item>Alpha Logging</item><item>Atlantic Resources</item><item>EJ and J</item><item>B and V</item><item>Tarpeh Timber Co.</item><item>B and B</item><item>Akewa Group</item><item>Thunderbird International Liberia</item><item>Bassa Timber And Logging</item><item>Sun Yeun </item><item>Liberia Hardwood</item><item>Ecoodwood</item><item>Gus van Kouwenhoven</item><item>Oriental Timber Company</item><item>Aicha Konneh (alias, Aissata Conde</item><item>Liberian Hardwood</item><item>International Consultant Capital (ICC)</item><item>John Gbessay</item><item>Atlantic Resources</item><item>Geblo Logging</item><item>Euro Logging</item><item>Mr. Clarence Tay</item><item>Alpha Logging</item><item>Eliza D.J. Kronyanh </item><item>E J and J Investment Corporation</item><item>Carl Dagenhart</item><item>Matt Karinen</item><item>Prince Welleh</item><item>Robertson Siawey</item><item>Equatorial Palm Oil (EPO)</item><item>Freeman EPO Security</item><item>Sasi Kumar </item><item>Sashi Nambiar</item><item>Alan Yancey</item><item>Etweda Cooper</item><item>Sando Johnson</item><item>Alan Gbowee</item><item>Forest Ventures</item><item>LIBINC Oil Palm Inc.</item><item>Liberia Forest Products Inc.</item><item>Liberia Agricultural Development Corp</item><item>Salala Rubber Corp</item><item>Maryland Oil Palm Plantation</item><item>Liberia Agricultural Company</item><item>Alpha Logging and Wood Processing Inc</item><item>Mandra Liberia/EJandJ Investment</item><item>Liberia Tree and Trading Company </item><item>Euro Liberia Logging Inc.</item><item>Geblo Logging Company</item><item>International Consultant Capital (ICC)</item><item>Atlantic Resources Limited</item><item>Tarpeh Timber Corporation</item><item>Akewa Group of  Companies </item><item>Bargor and Bargor Enterprises </item><item>Bassa Logging Company</item><item>Sun Yeun Logging Corporation</item><item>Liberia Hard Wood Corp. </item><item>Thunder Bird</item><item>Acquarian Commercial Holdings Inc.</item><item>African Gold Mining (Liberia) Ltd</item><item>Afro Minerals Inc./Kana Hills</item><item>AmLib United Minerals, Inc.</item><item>ArcelorMittal </item><item>Archean Gold</item><item>Ascension Resources Corp.</item><item>Bea Mountain Mining Corporation</item><item>BCM International</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="action_publish">Publish</string>
    <string name="menu_new_project">New</string>
    <string name="menu_projects">Stories</string>
    <string name="menu_lessons">Lessons</string>
    <string name="menu_glossary">Glossary</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_archive">Archive</string>
    <string name="menu_add_media">Add</string>
    <string name="menu_capture_media">Record</string>
    <string name="menu_share_media">Share</string>
    <string name="menu_save_media">Save</string>
    <string name="menu_play_media">Play</string>
    <string name="menu_render_media">Render</string>
    <string name="menu_bug_report">Bug Report</string>
    <string name="menu_login">Login</string>
    <string name="menu_logs">Send Log</string>
    <string name="menu_update">Update</string>
    <string name="menu_about">About</string>
    <string name="menu_save_project">Save</string>
    <string name="menu_overlay_camera">Camera</string>
    <string name="menu_add_from_gallery">Import from Gallery</string>
    <string name="menu_add_new_shot">Add Clip to Scene</string>
    <string name="menu_del_shot">Delete Current Clip</string>
    <string name="menu_export_project_files">Export Project Files as Zip</string>
    <string name="welcome_message">Hey there!\nWelcome to StoryMaker</string>
    <string name="default_project_list_view">This is your first time creating a project!\n\n- tap to start -</string>
    <string name="default_project_view_message">You have choices.\nTell your story with video, audio or photos.\n\n- tap to add -</string>
    <string name="pref_out_fps_title">Output Framerate (fps)</string>
    <string name="pref_out_fps_summary">Frames per second to save output video at (15-30)</string>
    <string name="pref_out_rate_title">Output Bitrate (kbps)</string>
    <string name="pref_out_rate_summary">Bitrate of video output (300-1500)</string>
    <string name="pref_out_format_title">Output Format</string>
    <string name="pref_out_format_summary">File container format (mp4, 3gp, ogg)</string>
    <string name="pref_out_vcodec_title">Output Video Codec</string>
    <string name="pref_out_vcodec_summary">video codec (copy, libx264, etc)</string>
    <string name="pref_out_acodec_title">Output Audio Codec</string>
    <string name="pref_out_acodec_summary">audio codec (copy, aac, mp3, etc)</string>
    <string name="pref_out_vwidth_title">Custom Video Width (px)</string>
    <string name="pref_out_vwidth_summary">custom video width for outputed video</string>
    <string name="pref_out_vheight_title">Custom Video Height (px)</string>
    <string name="pref_out_vheight_summary">custom video height for outputed video</string>
    <string name="hintTitle">title</string>
    <string name="hintStartTime">start (00:00:00)</string>
    <string name="hintEndTime">duratio (00:00:00)</string>
    <string name="hintFadeIn">fade in (frames)</string>
    <string name="hintFadeOut">fade out (frames)</string>
    <string name="start_recording">Record</string>
    <string name="stop_recording">Stop</string>
    <string name="play_recording">Play</string>
    <string name="save_recording">Save</string>
    <string name="downloading_lessons_from_server_">Downloading lessons from server...</string>
    <string name="checking_for_updates_">Checking for updates...</string>
    <string name="app_name_lc">Log Collector</string>
    <string name="message_subject">Android device log</string>
    <string name="acquiring_log_progress_dialog_message">Acquiring log from the system\u2026</string>
    <string name="chooser_title">"Select an application to send the log"</string>
    <string name="failed_to_get_log_message">"Failed to get the log from the system."</string>
    <string name="new_story_working_title">Working title…</string>
    <string name="new_story_choose_something">Choose something brief that defines the topic and intrigues your audience.</string>
    <string name="new_story_choose_a_medium">Choose a medium.</string>
    <string name="new_story_simple_story">Simple Story</string>
    <string name="new_story_choose_template">Scene Template</string>
    <string name="button_start_my_story">START MY STORY</string>
</resources>