<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*" >

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="0.5"
        android:padding="5dip" >
 		<RelativeLayout
            android:id="@+id/load_new_report"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="2dp"
            android:layout_weight="0.50"
            android:background="@color/menu_background"
            android:clickable="true" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/add" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:src="@drawable/add" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/load_reports"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/menu_background"
            android:clickable="true" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/view" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView2"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="22dp"
                android:src="@drawable/reports" />

        </RelativeLayout>
 
    </TableRow>
 
   <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="0.5"
        android:padding="5dip" >
 
        <RelativeLayout
            android:id="@+id/load_lessons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="2dp"
            android:layout_weight="0.50"
            android:background="@color/menu_background"
            android:clickable="true" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/help" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/TextView02"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="22dp"
                android:src="@drawable/info" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/load_sync"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.39"
            android:background="@color/menu_background" 
            android:clickable="true">

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/sync" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/TextView01"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="22dp"
                android:src="@drawable/sync" />

        </RelativeLayout>

    </TableRow>
 
</TableLayout>